force-app/main/default/objects/Ticket_Tracker__c/Ticket_Tracker__c.object-meta.xml
<CustomObject>
    <label>Ticket Tracker</label>
    <nameField>
        <displayFormat>SR-{0}</displayFormat>
        <label>Ticket Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>