force-app/main/default/objects/Ticket_Tracker__c/fields/Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description__c</fullName>
    <inlineHelpText>Enter your ticket description</inlineHelpText>
    <label>Brief Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>