force-app/main/default/objects/Ticket_Tracker__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <inlineHelpText>Enter your ticket subject</inlineHelpText>
    <label>Subject</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>